samples/_failures_safe/1761043052_de0d18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ded33df9.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_ded33df9.c:176:17: error: expected ‘)’ at end of input
  176 |     if(input < 0
      |       ~         ^
      |                 )
./samples/SAFE/__tmp_ded33df9.c:176:5: error: expected declaration or statement at end of input
  176 |     if(input < 0
      |     ^~
